Huge modifications to java 22 and various CVE fixes